--- a/gst-plugins-base/po/af.po
+++ b/gst-plugins-base/po/af.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins 0.7.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-13 01:32+0100\n"
+"POT-Creation-Date: 2009-07-14 16:58+0100\n"
 "PO-Revision-Date: 2004-03-18 14:16+0200\n"
 "Last-Translator: Petri Jooste <rkwjpj@puk.ac.za>\n"
 "Language-Team: Afrikaans <i18n@af.org.za>\n"
@@ -195,8 +195,12 @@ msgid "Can't play a text subtitles and subpictures."
 msgstr ""
 
 #, fuzzy
-msgid "No file name specified."
-msgstr "Geen lêernaam gespesifiseer."
+msgid "No Temp directory specified."
+msgstr "Geen toestel gespesifiseer"
+
+#, fuzzy, c-format
+msgid "Could not create temp file \"%s\"."
+msgstr "Kon nie skryf na lêer \"%s\" nie."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
@@ -486,6 +490,9 @@ msgstr "Kon nie toestel \"%s\" oopmaak vir lees en skryf nie."
 
 #~ msgid "Could not open file \"%s\" for writing."
 #~ msgstr "Kon nie lêer \"%s\" oopmaak om in te skryf nie."
+
+#~ msgid "No filename specified."
+#~ msgstr "Geen lêernaam gespesifiseer."
 
 #~ msgid "No or invalid input audio, AVI stream will be corrupt."
 #~ msgstr "Geen of ongeldige klanktoevoer, AVI-stroom sal korrup wees."
