--- a/gst-plugins-base/po/az.po
+++ b/gst-plugins-base/po/az.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-0.8.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-13 01:32+0100\n"
+"POT-Creation-Date: 2009-07-14 16:58+0100\n"
 "PO-Revision-Date: 2004-03-19 18:29+0200\n"
 "Last-Translator: Metin Amiroff <metin@karegen.com>\n"
 "Language-Team: Azerbaijani <translation-team-az@lists.sourceforge.net>\n"
@@ -196,8 +196,12 @@ msgid "Can't play a text subtitles and subpictures."
 msgstr ""
 
 #, fuzzy
-msgid "No file name specified."
-msgstr "Fayl adı verilməyib."
+msgid "No Temp directory specified."
+msgstr "Avadanlıq bildirilməyib."
+
+#, fuzzy, c-format
+msgid "Could not create temp file \"%s\"."
+msgstr "\"%s\" faylına yazıla bilmədi."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
@@ -487,6 +491,9 @@ msgstr "\"%s\" avadanlığı oxuma və yazma üçün açıla bilmədi."
 
 #~ msgid "Could not open file \"%s\" for writing."
 #~ msgstr "\"%s\" faylı yazma üçün açıla bilmədi."
+
+#~ msgid "No filename specified."
+#~ msgstr "Fayl adı verilməyib."
 
 #~ msgid "No or invalid input audio, AVI stream will be corrupt."
 #~ msgstr "Səhv ya da olmayan audio girişi, AVI yayımı pozulacaqdır."
