--- a/gst-plugins-base/po/ca.po
+++ b/gst-plugins-base/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-13 01:32+0100\n"
+"POT-Creation-Date: 2009-07-14 16:58+0100\n"
 "PO-Revision-Date: 2005-12-04 22:00+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -195,9 +195,12 @@ msgstr ""
 msgid "Can't play a text subtitles and subpictures."
 msgstr ""
 
-#, fuzzy
-msgid "No file name specified."
-msgstr "No s'ha donat cap nom de fitxer"
+msgid "No Temp directory specified."
+msgstr ""
+
+#, fuzzy, c-format
+msgid "Could not create temp file \"%s\"."
+msgstr "No s'ha pogut tancar el fitxer vfs «%s»."
 
 #, fuzzy, c-format
 msgid "Could not open file \"%s\" for reading."
