--- a/gst-plugins-base/po/es.po
+++ b/gst-plugins-base/po/es.po
@@ -1,14 +1,14 @@
-# translation of gst-plugins-base-0.10.21.3.po to Español
+# translation of gst-plugins-base-0.10.22.2.po to Español
 # spanish translation for gst-plugins-base
 # This file is put in the public domain.
 #
-# Jorge González González <aloriel@gmail.com>, 2007, 20, 2009.
+# Jorge González González <aloriel@gmail.com>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-base 0.10.21.3\n"
+"Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-05-13 01:32+0100\n"
-"PO-Revision-Date: 2009-04-04 13:31+0200\n"
+"POT-Creation-Date: 2009-07-14 16:58+0100\n"
+"PO-Revision-Date: 2009-06-11 14:00+0200\n"
 "Last-Translator: Jorge González González <aloriel@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -177,29 +177,32 @@ msgstr "Falta el elemento «%s»; compruebe su instalación de GStreamer."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Tanto el elemento autoaudiosink como alsasink faltan."
 
-#, fuzzy
 msgid "Both autovideosink and xvimagesink elements are not working."
-msgstr "Tanto el elemento autovideosink como xvimagesink faltan."
+msgstr "Tanto el elemento autovideosink como xvimagesink no están funcionando."
 
 msgid "Custom text sink element is not usable."
-msgstr ""
+msgstr "No se puede usar el elemento sumidero (sink) de texto personalizado."
 
 msgid "No volume control found"
 msgstr "No se encontró ningún control de volumen"
 
-#, fuzzy
 msgid "Both autoaudiosink and alsasink elements are not working."
-msgstr "Tanto el elemento autoaudiosink como alsasink faltan."
+msgstr "Tanto el elemento autoaudiosink como alsasink no están funcionando."
 
 msgid "Can't play a text file without video."
 msgstr "No se puede reproducir un archivo de texto sin vídeo."
 
-#, fuzzy
 msgid "Can't play a text subtitles and subpictures."
-msgstr "No se puede reproducir un archivo de texto sin vídeo."
+msgstr ""
+"No se puede reproducir un archivo de texto de subtítulos y subimágenes."
 
-msgid "No file name specified."
-msgstr "No se especificó un nombre de archivo."
+#, fuzzy
+msgid "No Temp directory specified."
+msgstr "No se especificó un dispositivo."
+
+#, fuzzy, c-format
+msgid "Could not create temp file \"%s\"."
+msgstr "No se pudo cerrar el archivo VFS «%s»."
 
 #, c-format
 msgid "Could not open file \"%s\" for reading."
@@ -472,3 +475,6 @@ msgstr "El dispositivo «%s» ya se está usando."
 #, c-format
 msgid "Could not open device \"%s\" for reading and writing."
 msgstr "No se pudo abrir el dispositivo «%s» para su lectura y escritura."
+
+#~ msgid "No file name specified."
+#~ msgstr "No se especificó un nombre de archivo."
