katedec: create SPU format images from suitable background images
Make katedec fabricate dvd-style subpictures for subtitle overlay
bitmaps, for easier playbin2 integration (#588638).

--- a/gst-plugins-bad/ext/kate/README
+++ b/gst-plugins-bad/ext/kate/README
@@ -9,7 +9,7 @@ http://libtiger.googlecode.com/
 
 The Kate plugin contains various elements to manipulate Kate streams:
 
- - katedec: decodes Kate streams to text
+ - katedec: decodes Kate streams to text and SPU images
  - kateenc: encodes Kate streams from text and SPU images
  - kateparse: parses Kate streams
  - katetag: allows changing metadata in Kate streams
